packages/ingest/container-rust/tests/ui/xmlspec/fail/invalid_guard_false.rs
use usc_ingest::xmlspec;

xmlspec! {
    schema BadGuard {
        record Item
        from tag("item")
        where false
        {
            value: first_text(child("value")),
        }
    }
}

fn main() {}
